Don't abort the MimeHandlerStreamManager stream if we receive a RenderProcessHostChanged notification for a null old host.

This indicates that a subframe is being created. If we ignore  the old_host here and set
the new host pointer in the MimeHandlerStreamManager::EmbedderObserver class, this causes
the stream to be aborted prematurely leading to embedded PDFs not loading.

This should fix bug 650985

BUG=650985

Review-Url: https://codereview.chromium.org/2418963002
Cr-Commit-Position: refs/heads/master@{#425498}

Former-commit-id: b8cfa3b172b2741635247a8541e3251688aaa04f